@@ -1,6 +1,6 @@
 Package: spdep
-Version: 0.4-17
-Date: 2008-02-18
+Version: 0.4-18
+Date: 2008-02-13
 Title: Spatial dependence: weighting schemes, statistics and models
 Encoding: latin1
 Author: Roger Bivand <Roger.Bivand@nhh.no>, with contributions by Luc Anselin,
